<resources>
    <string name="app_name">Orlyst</string>
    <string name="nav_feed">Newsfeed</string>
    <string name="nav_sell">Sell</string>
    <string name="nav_profile">Profile</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="login_btn">Login</string>
    <string name="preview_orlyst">Preview Orlyst</string>
    <string name="title">Orlyst</string>
    <string name="new_to_orlyst">New to Orlyst?</string>
    <string name="email_hint">Email</string>
    <string name="mission_statement">[insert Orlyst\'s motto/mission statement]</string>
    <string name="password_hint">Password</string>
    <string name="search_hint">Search</string>
    <string name="num_items_found">Number of items found:</string>
    <string name = "email_alert">Email must be a valid Oxy email.</string>
    <string name = "password_length_alert">Password must be longer than 6 characters.</string>
    <string name = "invalid_creds">Invalid credentials, please try again.</string>
    <string name = "user_exists">User already exists! Please login.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="item_description">Item Description</string>
    <string name="image_of_item_being_sold">Image of item being sold</string>
    <string name="title_of_item">Title of item</string>
    <string name="back_button">Back Button</string>
    <string name="by_seller_name">by Seller Name</string>
    <string name="capture">Capture</string>
    <string name="selected_gallery_image">Selected Gallery Image</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="title_of_item">Title of item</string>
    <string name="price">Price</string>
    <string name="description_of_item">Description of item</string>
    <string name="books">Books</string>
    <string name="electronics">Electronics</string>
    <string name="clothes">Clothes</string>
    <string name="services">Services</string>
    <string name="supplies">Supplies</string>
    <string name="other">Other</string>
    <string name="item_image">Item Image</string>
    <string name="their_items">Their Items</string>
    <string name="watchlist">Watchlist</string>
    <string name="seller_s_name">Seller\'s Name</string>
    <string name="create_an_orlyst_account">Create an Orlyst Account</string>
    <string name="name_of_item">Name of item</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="name_of_user_selling">Name of user selling</string>
    <string name="item_image">Item Image</string>
    <string name="user_name">User Name</string>
    <string name="watchlist">Watchlist</string>
    <string name="my_items">My Items</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="name_of_item">Name of item</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="name_of_user_selling">Name of user selling</string>
</resources>
