<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mini_relative_layout"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/preview_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/app_title"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/preview_orlyst"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mission_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preview_btn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mission_statement"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mission_statement"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_hint">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mission_statement"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email_text_input_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            app:passwordToggleDrawable="@android:drawable/ic_menu_view"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_text"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_password_text_input_layout"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/login_btn"
            android:onClick="onLogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="70dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/new_to_orlyst" />

            <Button
                android:id="@+id/sign_up_page_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/sign_up_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>