<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/loading_spinner"
        android:contentDescription="@string/item_image" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/mini_relative_layout"
        android:layout_toEndOf="@+id/itemImageView">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/name_of_item"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_alignStart="@id/itemTitle"
            android:maxLines="3"
            android:text="@string/price"
            android:textStyle="italic"
            android:textSize="13sp" />
        <!--<TextView-->
        <!--android:id="@+id/itemDescription"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/itemPrice"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="3dp"-->
        <!--android:maxLines="3"-->
        <!--android:textSize="13sp"-->
        <!--android:text="This is the items description" />-->

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemPrice"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_alignStart="@id/itemTitle"
            android:maxLines="3"
            android:text="@string/category"
            android:textColor="@color/colorAccent"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/userSellingItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemCategory"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_alignStart="@id/itemTitle"
            android:maxLines="3"
            android:text="@string/name_of_user_selling"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/onWatchlistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userSellingItem"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_alignStart="@id/itemTitle"
            android:maxLines="3"
            android:text=""
            android:textSize="13sp" />

    </RelativeLayout>


</RelativeLayout>